# advent-of-code-2024

./: .devcontainer.json  .gitignore  README.md  devenv.nix  pyproject.toml
day_1/: day_1.py
day_2/: day_2.py
day_3/: day_3.py
day_4/: day_4.py
day_5/: day_5.py
day_6/: day_6.py
day_7/: day_7.py
day_8/: day_8.py
day_9/: day_9.py
